--- a/app/templates/location/browse.html
+++ b/app/templates/location/browse.html
@@ -1,3 +1,4 @@
+{% set title=_('Locations') %}
 {% extends '_private.html' %}
 {% from '_helpers.html' import render_pagination %}
 
@@ -11,12 +12,16 @@
 {% for location in locations %}
     <div class="col">
         <div class="card h-100 shadow">
-            <a href="{{ url_for('location.show', id=location.id) }}">
-                <img src="{{ url_for('static', filename='images/favicon.ico') }}" class="card-img-top" alt="Location title image">
-            </a>
+            <a href="{{ url_for('location.show', id=location.id) }}" class="stretched-link"></a>
+
+            {% set image_url = url_for('static', filename='images/favicon.ico') %}
+            {% if location.photo %}
+                {% set image_url = url_for('upload.get', path=location.photo.path) %}
+            {% endif %}
+            <img src="{{ image_url }}" class="card-img-top" alt="Location title image">
             <div class="card-body">
                 <h4 class="card-title">
-                    <a href="{{ url_for('location.show', id=location.id) }}" class="text-decoration-none link-dark">{{ location.name }}</a>
+                    <a href="{{ url_for('location.show', id=location.id) }}" class="text-decoration-none link-dark"></a>{{ location.name }}</a>
                 </h4>
                 <p class="card-text text-muted">{{ location.description }}</p>
             </div>
