Added links, document and photos support to location

--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -48,6 +48,7 @@
     </div>
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/dselect.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bs5-lightbox.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
 </body>
 </html>
