--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -5,6 +5,16 @@ body {
     background-color: #f5f5f5;
 }
 
+.image-caption {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    background-color: rgba(100, 100, 100, 0.6);
+    color:rgba(255, 255, 255, 0.75);
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
+
 .content-card {
     margin-bottom: 1em;
 }
