--- a/app/templates/location/_visits.html
+++ b/app/templates/location/_visits.html
@@ -1,3 +1,5 @@
+{% from '_helpers.html' import render_field, link_button %}
+
 <div class="card content-card">
     <div class="card-header">
         {{ _('Visits') }}
@@ -5,14 +7,17 @@
 
     <div class="list-group list-group-flush">
         <div class="list-group-item">
-            <form class="form" method="POST" action="" role="form">
+            <form method="POST" action="" role="form" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
-                {{ form.comment(placeholder=_('How was your visit?'), class_="form-control") }}
+
+                {{ render_field(form.comment, 'pencil', placeholder=_('How was your visit?')) }}
+                {{ render_field(form.photos, 'image') }}
+
                 <div class="d-flex justify-content-between mt-2">
                     <div class="row">
                         {{ form.date.label(class_="col-auto col-form-label") }}
                         <div class="col-auto">
-                            {{ form.date(placeholder=_('1.12.2020'), class_="form-control") }}
+                            {{ render_field(form.date, 'calendar-date', class='col-auto', skip_label=True)}}
                         </div>
                     </div>
                     {{ form.submit(class_="btn btn-success mt-2") }}
@@ -21,13 +26,26 @@
         </div>
 
         {% for visit in location.visits %}
-        <a href="{{ url_for('user.profile', id=visit.user_id) }}" class="list-group-item list-group-item-action">
+        <div class="list-group-item list-group-item-action">
             <div class="d-flex w-100 justify-content-between">
-                <strong class="mb-1">{{ visit.user.first_name }} {{ visit.user.last_name }}</strong>
+                <a href="{{ url_for('user.profile', id=visit.user_id) }}">
+                    <strong class="mb-1">{{ visit.user.first_name }} {{ visit.user.last_name }}</strong>
+                </a>
                 <small>{{ visit.visited_on }}</small>
             </div>
             <p class="mb-0">{{ visit.comment }}</p>
-        </a>
+
+            {% if visit.photos %}
+            <div class="row">
+                {% for image in visit.photos %}
+                <a href="{{ url_for('upload.get', path=image.path) }}" class="col-sm-2"
+                    data-toggle="lightbox" data-gallery="{{ visit.uploads_uuid }}">
+                    <img src="{{ url_for('upload.get', path=image.path) }}" class="img-fluid" alt="{{ image.name }}">
+                </a>
+                {% endfor %}
+            </div>
+            {% endif %}
+        </div>
         {% endfor %}
     </div>
 </div>
