--- a/app/templates/location/photo.html
+++ b/app/templates/location/photo.html
@@ -16,7 +16,7 @@
             {{ render_field(form.file, 'image') }}
 
             <div class='text-end mt-2'>
-                {{ link_button(_('Cancel'), url_for('location.show', id=location.id), None, 'danger') }}
+                {{ link_button(_('Cancel'), url_return(), None, 'danger') }}
                 {{ form.submit(class="btn btn-success") }}
             </div>
         </form>
