--- a/app/templates/location/edit.html
+++ b/app/templates/location/edit.html
@@ -34,7 +34,7 @@
                 {{ render_field(form.about, 'file-earmark-text', style="min-height: 15em", placeholder=_('Location description, history,...'), description=description) }}
 
                 <div class='text-end mt-2'>
-                    {{ link_button(_('Cancel'), return_url, None, 'danger') }}
+                    {{ link_button(_('Cancel'), url_return(), None, 'danger') }}
                     {{ form.submit(class="btn btn-success") }}
                 </div>
             </div>
