--- a/app/templates/location/_visits.html
+++ b/app/templates/location/_visits.html
@@ -27,21 +27,34 @@
 
         {% for visit in location.visits %}
         <div class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between">
-                <a href="{{ url_for('user.profile', id=visit.user_id) }}">
-                    <strong class="mb-1">{{ visit.user.first_name }} {{ visit.user.last_name }}</strong>
-                </a>
-                <small>{{ visit.visited_on }}</small>
+            <div class="control-hover">
+                <div class="d-flex w-100 justify-content-between">
+                    <span>
+                        <a href="{{ url_for('user.profile', id=visit.user_id) }}">
+                            <strong class="mb-1">{{ visit.user.first_name }} {{ visit.user.last_name }}</strong>
+                        </a>
+                        <span class="control-hide">
+                            {{ link_button('', url_for_return('location.photo_delete', photo_id=0), 'pencil', 'warning', class='btn-sm') }}
+                            {{ link_button('', url_for_return('location.photo_delete', photo_id=0), 'trash', 'danger', class='btn-sm') }}
+                        </span>
+                    </span>
+                    <small>{{ visit.visited_on }}</small>
+                </div>
+                <p class="mb-0">{{ visit.comment }}</p>
             </div>
-            <p class="mb-0">{{ visit.comment }}</p>
 
             {% if visit.photos %}
             <div class="row">
                 {% for image in visit.photos %}
-                <a href="{{ url_for('upload.get', path=image.path) }}" class="col-sm-2"
-                    data-toggle="lightbox" data-gallery="{{ visit.uploads_uuid }}">
-                    <img src="{{ url_for('upload.get', path=image.path) }}" class="img-fluid" alt="{{ image.name }}">
-                </a>
+                <div class="col-sm-3">
+                    <div class="position-relative control-hover">
+                        {{ link_button('', url_for_return('location.photo_delete', photo_id=0), 'trash', 'danger', class='btn-sm position-absolute top-0 start-0 control-hide') }}
+                        <a href="{{ url_for('upload.get', path=image.path) }}"
+                            data-toggle="lightbox" data-gallery="{{ visit.id }}">
+                            <img src="{{ url_for('upload.get', path=image.path) }}" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
                 {% endfor %}
             </div>
             {% endif %}
