--- a/app/templates/location/location.html
+++ b/app/templates/location/location.html
@@ -1,5 +1,6 @@
+{% set title=location.name %}
 {% extends "_private.html" %}
-{% from '_helpers.html' import link_button %}
+{% from '_helpers.html' import link_button, render_field %}
 
 {% block content %}
 
@@ -22,7 +23,28 @@
     </div>
     <div class="col-auto">
         <div class="h1">
-            {{ link_button('', '#', 'star', 'outline-primary') }}
+            <div class="dropdown d-inline">
+                <button href="#" class="btn btn-outline-primary m-1" id="dropdownBookmarks" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-star"></i>
+                </button>
+                <ul class="dropdown-menu shadow" aria-labelledby="dropdownBookmarks">
+                    {% for bookmark in bookmarks %}
+                        {% if location in bookmark.locations %}
+                            {{ dropdown_link(bookmark.name, 'star-fill', url_for_return('location.bookmark_remove', bookmarks_id=bookmark.id, location_id=location.id)) }}
+                        {% else %}
+                            {{ dropdown_link(bookmark.name, '', url_for_return('location.bookmark_add', bookmarks_id=bookmark.id, location_id=location.id)) }}
+                        {% endif %}
+                    {% endfor %}
+                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <form method="POST", role="form" action="{{ url_for_return('location.bookmark_create', location_id=location.id) }}" class="dropdown-item d-flex align-items-center">
+                            {{ bookmark_form.hidden_tag() }}
+                            {{ render_field(bookmark_form.name, skip_label=True, class="mb-0", style="min-width: 7em") }}
+                            {{ bookmark_form.submit(class="btn btn-success ms-2") }}
+                        </form>
+                    </li>
+                </ul>
+            </div>
             {{ link_button(_('Edit'), url_for_return('location.edit', id=location.id), 'pencil', 'outline-success') }}
             {{ link_button(_('Document'), url_for_return('location.document_add', location_id=location.id), 'file-earmark-plus', 'outline-success') }}
             {{ link_button(_('Photo'), url_for_return('location.photo_add', location_id=location.id), 'camera-fill', 'outline-success') }}
