--- a/app/templates/location/location.html
+++ b/app/templates/location/location.html
@@ -114,7 +114,7 @@
                 {% endif %}
                 {% for link in location.links %}
                 <div class="list-group-item list-group-item-action position-relative control-hover">
-                    {{ link_button('', url_for_return('location.photo_delete', photo_id=0), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0 foreground-item control-hide') }}
+                    {{ link_button('', url_for_return('location.link_remove', link_id=link.id), 'trash', 'danger', class='btn-sm position-absolute top-0 end-0 foreground-item control-hide') }}
                     <strong>{{ link.name }}</strong>
                     <p class="mb-0 text-muted text-truncate">{{ link.url }}</p>
                     <a href="{{ link.url }}" class="stretched-link"></a>
@@ -134,8 +134,8 @@
                     {% if item.type.name not in ('PHOTO', 'HISTORICAL_PHOTO') %}
                     <div class="list-group-item list-group-item-action position-relative control-hover">
                         <div class="position-absolute top-0 end-0 foreground-item control-hide">
-                            {{ link_button('', url_for_return('location.photo_delete', photo_id=0), 'pencil', 'warning', class='btn-sm') }}
-                            {{ link_button('', url_for_return('location.photo_delete', photo_id=0), 'trash', 'danger', class='btn-sm') }}
+                            {{ link_button('', url_for_return('location.document_edit', document_id=item.id), 'pencil', 'warning', class='btn-sm') }}
+                            {{ link_button('', url_for_return('location.document_remove', document_id=item.id), 'trash', 'danger', class='btn-sm') }}
                         </div>
                         <strong>{{ item.name }}</strong>
                         <p class="mb-0 text-muted">{{ item.description }}</p>
