--- a/app/templates/_helpers.html
+++ b/app/templates/_helpers.html
@@ -141,22 +141,24 @@
     </div>
 {%- endmacro -%}
 
-{%- macro render_pagination() -%}
+{%- macro render_pagination(pagination) -%}
+{% if pagination.show %}
 <nav class="mt-3" aria-label="Page navigation">
     <ul class="pagination justify-content-center">
-        <li class="page-item disabled">
-            <a class="page-link" href="" aria-label="Previous">
+        <li class="page-item {{ 'disabled' if not pagination.prev }}">
+            <a class="page-link" href="{{ pagination.prev }}" aria-label="Previous">
                 <i class="bi bi-arrow-left"></i>
             </a>
         </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
+        {% for page, link in pagination.pages.items() %}
+        <li class="page-item {{ 'active' if page == pagination.current }}"><a class="page-link" href="{{ link }}">{{ page }}</a></li>
+        {% endfor %}
+        <li class="page-item {{ 'disabled' if not pagination.next }}">
+            <a class="page-link" href="{{ pagination.next }}" aria-label="Next">
                 <i class="bi bi-arrow-right"></i>
             </a>
         </li>
     </ul>
 </nav>
+{% endif %}
 {%- endmacro %}
