--- a/app/templates/_menu.html
+++ b/app/templates/_menu.html
@@ -2,7 +2,7 @@
 
 <nav class="scrollable-content collapse d-md-block bg-light p-2" id="collapsibleMenu">
     <form class="d-flex" action="{{ url_for('location.search') }}" method="POST">
-        <input class="form-control me-2" type="search" placeholder="{{ _('Search') }}" aria-label="Search">
+        <input name='search' class="form-control me-2" type="search" placeholder="{{ _('Search') }}" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">{{ _('Search') }}</button>
     </form>
     <hr/>
